0.0002 Not Released

 * Use a MANIFEST.SKIP file based on the default file from ExtUtils::Manifest.

 * Format CHANGES according to CPAN::Changes::Spec. Add test file
   t/release-cpan-changes.t.

 * Convert t/03podcov.t -> t/release-pod-coverage.t.

 * Convert t/02pod.t -> t/release-pod.t.

 * Increment version number.

0.0001 2017-01-11

 * Initial release.