@@ -1,5 +1,9 @@
 0.0002 Not Released
 
+ * Add test file t/release-test-version.t.
+
+ * Add test file t/release-portability.t.
+
  * Use a MANIFEST.SKIP file based on the default file from ExtUtils::Manifest.
 
  * Format CHANGES according to CPAN::Changes::Spec. Add test file
